--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid mt-5">
         <!-- Logo Section -->
         <div class="text-center mb-4">
-            <img src="static/images/Logo.png" alt="Logo" class="chatbot-logo">
+            <img src="static/images/logo.png" alt="Logo" class="chatbot-logo">
         </div>
 
         <!-- University Title -->
