--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     color: #343a40;
-    background-image: url('static/images/');
+    background-image: url('static/images/bgimage.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
