--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,10 @@
                         </select>
                     </div>
                     <div class="col-12 col-md-2">
-                        <button id="load-data" class="btn btn-neon w-100">
-                            <i class="fas fa-database me-2"></i>Load Data
-                        </button>
+                       <!-- Change button ID to match JavaScript -->
+<button id="load-data" class="btn btn-neon w-100">
+    <i class="fas fa-database me-2"></i>Load Data
+</button>
                     </div>
                 </div>
             </div>
